--- a/services.html
+++ b/services.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>雑貨・お取り寄せグルメサイト向け（ランディングページタイプ） 無料ホームページテンプレート tp_lp2</title>
+	<title>過労ちゃんポータル</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="ここにサイト説明を入れます">
+	<meta name="description" content="東方project リプレイ コミュニティ">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,7 +18,7 @@
 		<!--▼▼▼▼▼ここから「ヘッダー」-->
 		<header>
 
-			<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="あなたのサイト名"></a></h1>
+			<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="過労ちゃんポータル"></a></h1>
 
 			<ul id="header-box">
 				<li><a href="#">Online Shop</a></li>
@@ -66,11 +66,8 @@
 
 			<div class="footer1">
 
-				<p class="logo"><img src="images/logo_footer.png" alt="あなたのサイト名"></p>
+				<p class="logo"><img src="images/logo_footer.png" alt="過労ちゃんポータル"></p>
 
-				<p>〒000-0000 東京足立区XXXXXX1丁目1号<br>
-					代表電話：000-0000-0000<br>
-					受付時間：月曜日から金曜日の8時から18時まで</p>
 
 				<ul class="sns1">
 					<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
@@ -79,7 +76,7 @@
 					<li><a href="#"><i class="fab fa-instagram"></i></a></li>
 				</ul>
 
-				<small>Copyright© あなたのサイト名 All Rights Reserved.</small>
+				<small>Copyright© puresign-tokyo project All Rights Reserved.</small>
 
 			</div>
 			<!--/.footer1-->
@@ -127,18 +124,6 @@
 
 
 
-	<!--ポップアップ-->
-	<section id="popup">
-
-		<h2>ポップアップウィンドウ</h2>
-		<p>ポップアップです。同一ページでは一回だけ表示しますがブラウザを閉じて開き直すと再び表示されます。<br>
-			ボックスの色やサイズなどはcssで調整できます。ポップアップ出現までの時間はjsで調整できます。</p>
-		<span class="close-btn"><i class="fa-solid fa-xmark"></i></span>
-
-	</section>
-
-
-
 	<!--開閉ボタン（ハンバーガーアイコン）-->
 	<div id="menubar_hdr">
 		<span></span><span></span><span></span>
@@ -165,7 +150,7 @@
 			</ul>
 		</nav>
 
-		<div class="sh">小さな端末でのみ表示させたい情報があれば、ここに記入して下さい。</div>
+		<div class="sh"></div>
 
 	</div>
 
