--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!--▼▼▼▼▼ここから「ヘッダー」-->
 		<header>
 
-			<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="あなたのサイト名"></a></h1>
+			<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="過労ちゃんポータル"></a></h1>
 
 			<!-- <ul id="header-box">
 				<li><a href="#">Online Shop</a></li>
@@ -204,7 +204,7 @@
 
 			<div class="footer1">
 
-				<p class="logo"><img src="images/logo_footer.png" alt="あなたのサイト名"></p>
+				<p class="logo"><img src="images/logo_footer.png" alt="過労ちゃんポータル"></p>
 
 
 				<ul class="sns1">
@@ -262,17 +262,6 @@
 
 
 
-	<!--ポップアップ-->
-	<section id="popup">
-
-		<h2>ポップアップウィンドウ</h2>
-		<p>ポップアップです。同一ページでは一回だけ表示しますがブラウザを閉じて開き直すと再び表示されます。<br>
-			ボックスの色やサイズなどはcssで調整できます。ポップアップ出現までの時間はjsで調整できます。</p>
-		<span class="close-btn"><i class="fa-solid fa-xmark"></i></span>
-
-	</section>
-
-
 
 	<!--開閉ボタン（ハンバーガーアイコン）-->
 	<div id="menubar_hdr">
@@ -300,7 +289,7 @@
 			</ul>
 		</nav>
 
-		<div class="sh">小さな端末でのみ表示させたい情報があれば、ここに記入して下さい。</div>
+		<div class="sh"></div>
 
 	</div>
 
