プロフィール名の修正

--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
 
 				<div class="list">
 					<figure><img src="images/profile.jpg" alt=""></figure>
-					<h4>過労ちゃん</h4>
+					<h4>irckk</h4>
 					<p class="text">
 
-
+						irckk(あいあーるしーけーけー)です。<br>
 						2013年9月8日からniconicoで「東方原作みんなのリプレイ鑑賞会」を始めました。<br>
 						YouTubeでは2020年4月19日から配信しています。Twitchでも同時放送しています。<br>
 
