--- a/services.html
+++ b/services.html
@@ -20,10 +20,6 @@
 
 			<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="過労ちゃんポータル"></a></h1>
 
-			<ul id="header-box">
-				<li><a href="#">Online Shop</a></li>
-			</ul>
-
 		</header>
 		<!--▲▲▲▲▲ここまで「ヘッダー」-->
 
@@ -33,21 +29,87 @@
 
 		<section>
 
-			<h2 class="c">自己紹介</h2>
+			<h2 class="c">東方原作みんなのリプレイ鑑賞会</h2>
 
 			<div class="list-tate-scroll">
 
-				<div class="list">
-					<figure><img src="images/profile.jpg" alt=""></figure>
-					<h4>過労ちゃん</h4>
+				<div class="list" id="replay-party-stream">
+					<figure><a href="https://www.twitch.tv/karouchangamer"><img src="images/replay-party.png"
+								alt=""></a></figure>
+					<h4>配信</h4>
 					<p class="text">
 
+						2013年9月8日から<a href="https://www.nicovideo.jp/user/33950117">niconico</a>で始まって以来長く続いている鑑賞会です。<br>
+						毎週日曜14時から行っています。<br>
+						過去のログは<a
+							href="https://docs.google.com/spreadsheets/d/1lcrbGnX5VC_ENwgctma-8SS8Tz3_QYcgftANHOpwdGs">こちら</a>から見ることができます。<br>
+						以下の3サイトで同時放送しています
+					<ul class="sns1">
+						<li><a href="https://www.youtube.com/@%E9%81%8E%E5%8A%B4%E3%81%A1%E3%82%83%E3%82%93-m1v"><i
+									class="fab fa-youtube"></i></a></li>
+						<li><a href="https://www.nicovideo.jp/user/33950117"><img src="images/niconico.png"></a>
+						</li>
+						<li><a href="https://www.twitch.tv/karouchangamer"><i class="fab fa-twitch"></i></a>
+						</li>
+					</ul>
+					</p>
+				</div>
 
-						2013年9月8日からniconicoで「東方原作みんなのリプレイ鑑賞会」を始めました。<br>
-						YouTubeでは2020年4月19日から配信しています。Twitchでも同時放送しています。<br>
+				<div class="list" id="hatenablog">
+					<figure><a href="https://yumiyareplayparty.hatenablog.com/"><img src="images/hatenablog.png"
+								alt=""></a></figure>
+					<h4>ルールや順番など</h4>
+					<p class="text">
+						<a href="https://yumiyareplayparty.hatenablog.com/">こちら</a>からルールや順番などを読むことができます。<br>
+					</p>
+				</div>
 
-						毎週日曜日の正午から【東方原作みんなのリプレイ鑑賞会】を開催しています。<br>
+				<div class="list" id="reservation-form">
+					<figure><a
+							href="https://docs.google.com/spreadsheets/d/14cW8eiLYkgYR4cyvZXQPlSAf0x2wE-GRwPKkprdvOwU/edit"><img
+								src="images/google-sheets.png" alt=""></a></figure>
+					<h4>応募フォーム</h4>
+					<p class="text">
+						<a
+							href="https://docs.google.com/spreadsheets/d/14cW8eiLYkgYR4cyvZXQPlSAf0x2wE-GRwPKkprdvOwU/edit">こちら</a>から事前予約できます<br>
+					</p>
+				</div>
 
+			</div>
+			<!--/.list-yoko-scroll-->
+
+		</section>
+
+		<section>
+
+			<h2 class="c">リプレイアップローダ</h2>
+
+			<div class="list-tate-scroll">
+
+				<div class="list" id="k-uploader">
+					<figure><a href="https://www.puresign.tokyo"><img src="images/k-uploader.png" alt=""></a></figure>
+					<h4>けーろだ</h4>
+					<p class="text">
+						東方のリプレイをアップロードするための場所です<br>
+						リプレイ鑑賞会の為だけでなく多様な用途でお使いください
+					</p>
+				</div>
+
+				<div class="list" id="k-uploader-th09">
+					<figure><a href="https://www.puresign.tokyo/pofv/index.html"><img src="images/k-uploader-th09.png"
+								alt=""></a></figure>
+					<h4>けーろだ花映塚</h4>
+					<p class="text">
+						けーろだは花映塚が上げられません。こちらに上げてください。
+					</p>
+				</div>
+
+				<div class="list" id="getuploader-toho_yumiya">
+					<figure><a href="https://ux.getuploader.com/toho_yumiya/"><img src="images/uploader.png" alt=""></a>
+					</figure>
+					<h4>thprac用uploader</h4>
+					<p class="text">
+						有志の作成した練習用ツール、thpracを使用したリプレイはこちらにアップロードしてください
 					</p>
 				</div>
 
@@ -70,10 +132,10 @@
 
 
 				<ul class="sns1">
-					<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-					<li><a href="#"><i class="fab fa-line"></i></a></li>
-					<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-					<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://x.com/karouchangamer3"><i class="fa-brands fa-x-twitter"></i></a></li>
+					<li><a href="https://www.youtube.com/@%E9%81%8E%E5%8A%B4%E3%81%A1%E3%82%83%E3%82%93-m1v"><i
+								class="fab fa-youtube"></i></a></li>
+					<li><a href="https://www.twitch.tv/karouchangamer"><i class="fab fa-twitch"></i></a></li>
 				</ul>
 
 				<small>Copyright© puresign-tokyo project All Rights Reserved.</small>
@@ -85,23 +147,25 @@
 
 				<div id="footermenu">
 					<ul>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
+						<li class="title"><a href="index.html">ホーム</a></li>
+						<li class="title"><a href="about.html">自己紹介</a></li>
 					</ul>
 					<ul>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
+						<li class="title"><a href="services.html">活動一覧</a></li>
+						<li><a href="services.html#replay-party-stream">東方リプレイ鑑賞会 配信</a></li>
+						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#k-uploader">けーろだ</a></li>
+						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
+						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
+					</ul>
+					<ul>
+						<li class="title"><a href="links.html">外部リンク</a></li>
+						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
+						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
+						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
+						<li><a href="links.html#thprac">thprac</a></li>
 					</ul>
 				</div>
 
@@ -137,16 +201,27 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">ホーム</a></li>
-				<li><a href="">ドロップダウン</a>
+				<li><a href="about.html">自己紹介</a></li>
+				<li><a href="services.html">活動一覧</a>
 					<ul>
-						<li><a href="#">メニューメニューメニュー</a></li>
-						<li><a href="#">メニュー</a></li>
-						<li><a href="#">メニュー</a></li>
-						<li><a href="#">メニュー</a></li>
+						<li><a href="services.html#replay-party-stream">東方原作みんなのリプレイ鑑賞会 配信</a></li>
+						<li><a href="services.html#hatenablog">東方原作みんなのリプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#reservation-form">東方原作みんなのリプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#k-uploader">けーろだ</a></li>
+						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
+						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
 					</ul>
 				</li>
-				<li><a href="#">メニュー</a></li>
-				<li><a href="#">メニュー</a></li>
+				<li><a href="links.html">外部リンク</a>
+					<ul>
+						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
+						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
+						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
+						<li><a href="links.html#thprac">thprac</a></li>
+					</ul>
+				</li>
+
 			</ul>
 		</nav>
 
