--- a/about.html
+++ b/about.html
@@ -20,10 +20,6 @@
 
 			<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="過労ちゃんポータル"></a></h1>
 
-			<ul id="header-box">
-				<li><a href="#">Online Shop</a></li>
-			</ul>
-
 		</header>
 		<!--▲▲▲▲▲ここまで「ヘッダー」-->
 
@@ -52,6 +48,31 @@
 				</div>
 
 			</div>
+
+			<h2 class="c">詳細なプロフィール</h2>
+
+			<div class="list-tate-scroll">
+
+				<div class="list">
+					<figure><img src="images/shanghai.png" alt=""></figure>
+					<h4>東方</h4>
+					<p class="text">
+
+						地霊殿Lunaticノーミス(アリス装備)<br>
+						星蓮船Lunatic25.0億(魔理沙A)<br>
+						星蓮船Lunatic25.8億(早苗B)<br>
+						星蓮船Hard25.2億(魔理沙A)<br>
+						星蓮船Normal22.1億(魔理沙A)<br>
+						神霊廟Lunatic34.0億(魔理沙)<br>
+						神霊廟Lunatic30.7億(妖夢)<br>
+						神霊廟Hard33.3億(魔理沙)<br>
+
+					</p>
+				</div>
+
+			</div>
+
+
 			<!--/.list-yoko-scroll-->
 
 		</section>
@@ -68,11 +89,12 @@
 
 				<p class="logo"><img src="images/logo_footer.png" alt="過労ちゃんポータル"></p>
 
+
 				<ul class="sns1">
-					<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-					<li><a href="#"><i class="fab fa-line"></i></a></li>
-					<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-					<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://x.com/karouchangamer3"><i class="fa-brands fa-x-twitter"></i></a></li>
+					<li><a href="https://www.youtube.com/@%E9%81%8E%E5%8A%B4%E3%81%A1%E3%82%83%E3%82%93-m1v"><i
+								class="fab fa-youtube"></i></a></li>
+					<li><a href="https://www.twitch.tv/karouchangamer"><i class="fab fa-twitch"></i></a></li>
 				</ul>
 
 				<small>Copyright© puresign-tokyo project All Rights Reserved.</small>
@@ -84,23 +106,25 @@
 
 				<div id="footermenu">
 					<ul>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
+						<li class="title"><a href="index.html">ホーム</a></li>
+						<li class="title"><a href="about.html">自己紹介</a></li>
 					</ul>
 					<ul>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
+						<li class="title"><a href="services.html">活動一覧</a></li>
+						<li><a href="services.html#replay-party-stream">東方リプレイ鑑賞会 配信</a></li>
+						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#k-uploader">けーろだ</a></li>
+						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
+						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
+					</ul>
+					<ul>
+						<li class="title"><a href="links.html">外部リンク</a></li>
+						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
+						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
+						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
+						<li><a href="links.html#thprac">thprac</a></li>
 					</ul>
 				</div>
 
@@ -140,20 +164,31 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">ホーム</a></li>
-				<li><a href="">ドロップダウン</a>
+				<li><a href="about.html">自己紹介</a></li>
+				<li><a href="services.html">活動一覧</a>
 					<ul>
-						<li><a href="#">メニューメニューメニュー</a></li>
-						<li><a href="#">メニュー</a></li>
-						<li><a href="#">メニュー</a></li>
-						<li><a href="#">メニュー</a></li>
+						<li><a href="services.html#replay-party-stream">東方原作みんなのリプレイ鑑賞会 配信</a></li>
+						<li><a href="services.html#hatenablog">東方原作みんなのリプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#reservation-form">東方原作みんなのリプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#k-uploader">けーろだ</a></li>
+						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
+						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
 					</ul>
 				</li>
-				<li><a href="#">メニュー</a></li>
-				<li><a href="#">メニュー</a></li>
+				<li><a href="links.html">外部リンク</a>
+					<ul>
+						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
+						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
+						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
+						<li><a href="links.html#thprac">thprac</a></li>
+					</ul>
+				</li>
+
 			</ul>
 		</nav>
 
-		<div class="sh">小さな端末でのみ表示させたい情報があれば、ここに記入して下さい。</div>
+		<div class="sh"></div>
 
 	</div>
 
