--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
 
 			<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="過労ちゃんポータル"></a></h1>
 
-			<!-- <ul id="header-box">
-				<li><a href="#">Online Shop</a></li>
-			</ul> -->
-
 		</header>
 		<!--▲▲▲▲▲ここまで「ヘッダー」-->
 
@@ -90,59 +86,21 @@
 
 					<!-- <p class="c btn5-container mt"><a href="#" class="btn5 border-radius">オンラインショップはこちら</a></p> -->
 
+					<p class="c btn5-container mt"><a href="services.html" class="btn5 border-radius">活動一覧はこちら</a></p>
 				</section>
 				<!--▲▲▲▲▲ここまで「素敵なキッチンアイテムや暮らしを彩る雑貨が揃うお店」-->
 
 
 
 				<!--▼▼▼▼▼ここから「商品ラインナップ」-->
-				<section>
+				<!-- <section> -->
 
-					<h2 class="c">活動一覧</h2>
+				<!-- <h2 class="c">活動一覧</h2> -->
 
-					<div class="list-grid">
+				<!-- <p class="c btn5-container mt"><a href="#" class="btn5 border-radius">活動一覧はこちら</a></p> -->
+				<!--/.list-grid-->
 
-						<div class="list">
-							<figure><a href="services.html"><img src="images/replay-party.png" alt=""></a></figure>
-							<div class="text">
-								<h4>東方原作みんなのリプレイ鑑賞会</h4>
-								<p>毎週日曜14時から開催している、皆さんからリプレイを集って流す大会です。</p>
-							</div>
-						</div>
-
-						<div class="list">
-							<figure><a href="https://www.puresign.tokyo/"><img src="images/k-uploader.png" alt=""></a>
-							</figure>
-							<div class="text">
-								<h4>けーろだ</h4>
-								<p>東方のリプレイをアップロードするための場所です。リプレイ鑑賞会の為だけでなく多様な用途でお使いください</p>
-							</div>
-						</div>
-
-						<div class="list">
-							<figure><a href="https://www.puresign.tokyo/pofv/index.html"><img
-										src="images/k-uploader-th09.png" alt=""></a></figure>
-							<div class="text">
-								<h4>けーろだ花映塚</h4>
-								<p>けーろだは花映塚が上げられません。こちらに上げてください</p>
-							</div>
-						</div>
-
-						<div class="list">
-							<figure><a href="https://ux.getuploader.com/toho_yumiya/"><img src="images/uploader.png"
-										alt=""></a></figure>
-							<div class="text">
-								<h4>thprac用uploader</h4>
-								<p>有志の作成した練習用ツール、thpracを使用したリプレイはこちらにアップロードしてください</p>
-							</div>
-						</div>
-
-
-
-					</div>
-					<!--/.list-grid-->
-
-				</section>
+				<!-- </section> -->
 				<!--▲▲▲▲▲ここまで「商品ラインナップ」-->
 
 
@@ -168,7 +126,7 @@
 						<div class="list image1">
 							<div class="text">
 								<h4><span class="sub-text">自己紹介</span><span class="main-text">About</span></h4>
-								<p>過労ちゃんの自己紹介です</p>
+								<p>管理人の自己紹介ページです</p>
 							</div>
 						</div>
 					</a>
@@ -223,23 +181,25 @@
 
 				<div id="footermenu">
 					<ul>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
+						<li class="title"><a href="index.html">ホーム</a></li>
+						<li class="title"><a href="about.html">自己紹介</a></li>
 					</ul>
 					<ul>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
+						<li class="title"><a href="services.html">活動一覧</a></li>
+						<li><a href="services.html#replay-party-stream">東方リプレイ鑑賞会 配信</a></li>
+						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#k-uploader">けーろだ</a></li>
+						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
+						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
+					</ul>
+					<ul>
+						<li class="title"><a href="links.html">外部リンク</a></li>
+						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
+						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
+						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
+						<li><a href="links.html#thprac">thprac</a></li>
 					</ul>
 				</div>
 
@@ -276,16 +236,27 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">ホーム</a></li>
-				<li><a href="">ドロップダウン</a>
+				<li><a href="about.html">自己紹介</a></li>
+				<li><a href="services.html">活動一覧</a>
 					<ul>
-						<li><a href="#">メニューメニューメニュー</a></li>
-						<li><a href="#">メニュー</a></li>
-						<li><a href="#">メニュー</a></li>
-						<li><a href="#">メニュー</a></li>
+						<li><a href="services.html#replay-party-stream">東方原作みんなのリプレイ鑑賞会 配信</a></li>
+						<li><a href="services.html#hatenablog">東方原作みんなのリプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#reservation-form">東方原作みんなのリプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#k-uploader">けーろだ</a></li>
+						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
+						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
 					</ul>
 				</li>
-				<li><a href="#">メニュー</a></li>
-				<li><a href="#">メニュー</a></li>
+				<li><a href="links.html">外部リンク</a>
+					<ul>
+						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
+						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
+						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
+						<li><a href="links.html#thprac">thprac</a></li>
+					</ul>
+				</li>
+
 			</ul>
 		</nav>
 
