--- a/links.html
+++ b/links.html
@@ -20,10 +20,6 @@
 
 			<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="過労ちゃんポータル"></a></h1>
 
-			<ul id="header-box">
-				<li><a href="#">Online Shop</a></li>
-			</ul>
-
 		</header>
 		<!--▲▲▲▲▲ここまで「ヘッダー」-->
 
@@ -33,20 +29,76 @@
 
 		<section>
 
-			<h2 class="c">自己紹介</h2>
+			<h2 class="c">有志の便利な制作物</h2>
 
 			<div class="list-tate-scroll">
 
-				<div class="list">
-					<figure><img src="images/profile.jpg" alt=""></figure>
-					<h4>過労ちゃん</h4>
+				<div class="list" id="silentselene">
+					<figure><a href="https://www.silentselene.net"><img src="images/silentselene.png" alt=""></a>
+					</figure>
+					<h4><a href="https://www.silentselene.net">サイレントセレナ</a></h4>
 					<p class="text">
 
+						海外の方が作成したスコアボードです。<br>
+						多数の東方作品に対応しており、ユーザ毎にリプレイが管理されていたり、面ごとのプレイ進行が分かったりと多機能です。<br>
+						一時的にアップロードするのではなく、永久に保存する場合はこちらに上げてください。<br>
+						言語は日本語と英語に対応しています。<br>
 
-						2013年9月8日からniconicoで「東方原作みんなのリプレイ鑑賞会」を始めました。<br>
-						YouTubeでは2020年4月19日から配信しています。Twitchでも同時放送しています。<br>
+					</p>
+				</div>
 
-						毎週日曜日の正午から【東方原作みんなのリプレイ鑑賞会】を開催しています。<br>
+				<div class="list" id="urayou">
+					<figure><a href="https://thscore.pndsng.com/"><img src="images/urayou.png" alt=""></a></figure>
+					<h4><a href="https://thscore.pndsng.com">裏スコアボード</a></h4>
+					<p class="text">
+
+						対応作品の難易度Lunaticにおいて、<br>
+						一定スコアに達した人のみが登録できるスコアボードです。<br>
+						スコアラーの間ではこのスコア基準に達することが一種の大台となっています。<br>
+
+					</p>
+				</div>
+
+				<div class="list" id="maribelhearn">
+					<figure><a href="https://maribelhearn.com"><img src="images/maribelhearn.png" alt=""></a></figure>
+					<h4><a href="https://maribelhearn.com">maribelhearn.com</a></h4>
+					<p class="text">
+
+						海外の東方ポータルです。<br>
+						<a href="https://maribelhearn.com/lnn">LNNまとめスレッド</a>など多種多様なページが存在しています。<br>
+
+					</p>
+				</div>
+
+
+				<div class="list" id="alcostg-score">
+					<figure><a href="https://alcostg-score.wefma.net"><img src="images/alcostg-score.png" alt=""></a>
+					</figure>
+					<h4><a href="https://alcostg-score.wefma.net">黄昏酒場スコアボード</a></h4>
+					<p class="text">
+
+						黄昏酒場のスコアボードです。<br>
+						<a href="http://alcostg.amatukami.com/">黄昏酒場</a>は東方の製作者のZUNも製作に関わっていて、<br>
+						楽曲もアレンジされて秘封CDに入っていることで有名な、<br>
+						れっきとした東方projectシリーズのフリーゲームです。<br>
+						<br>
+						<a href="https://www.silentselene.net">サイレントセレナ</a>には黄昏酒場のスコアボードが存在していないので<br>
+						こちらにアップロードしてください。<br>
+
+					</p>
+				</div>
+
+				<div class="list" id="thprac">
+					<figure><a href="https://github.com/touhouworldcup/thprac"><img src="images/thprac.png" alt=""></a>
+					</figure>
+					<h4><a href="https://github.com/touhouworldcup/thprac">thprac</a></h4>
+					<p class="text">
+
+						黄昏酒場を含むほぼ全ての東方作品に対応している練習ツールです<br>
+						ゲームを開いた上で本ツールを起動し、practiceを選ぶとスペルプラクティスがない作品でスペルプラクティスが出来たり、
+						星蓮船の面開幕所持ベントラーの編集など多彩な設定をしたうえで練習することができます。<br>
+						ゲームの内容を書き換えるため一部のセキュリティソフトウェアに検知される可能性があります。<br>
+						自己責任で使用してください。<br>
 
 					</p>
 				</div>
@@ -68,11 +120,12 @@
 
 				<p class="logo"><img src="images/logo_footer.png" alt="過労ちゃんポータル"></p>
 
+
 				<ul class="sns1">
-					<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-					<li><a href="#"><i class="fab fa-line"></i></a></li>
-					<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-					<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://x.com/karouchangamer3"><i class="fa-brands fa-x-twitter"></i></a></li>
+					<li><a href="https://www.youtube.com/@%E9%81%8E%E5%8A%B4%E3%81%A1%E3%82%83%E3%82%93-m1v"><i
+								class="fab fa-youtube"></i></a></li>
+					<li><a href="https://www.twitch.tv/karouchangamer"><i class="fab fa-twitch"></i></a></li>
 				</ul>
 
 				<small>Copyright© puresign-tokyo project All Rights Reserved.</small>
@@ -84,23 +137,25 @@
 
 				<div id="footermenu">
 					<ul>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
+						<li class="title"><a href="index.html">ホーム</a></li>
+						<li class="title"><a href="about.html">自己紹介</a></li>
 					</ul>
 					<ul>
-						<li class="title">メニュー見出し</li>
-						<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
-						<li><a href="#">サンプルメニュー</a></li>
+						<li class="title"><a href="services.html">活動一覧</a></li>
+						<li><a href="services.html#replay-party-stream">東方リプレイ鑑賞会 配信</a></li>
+						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#k-uploader">けーろだ</a></li>
+						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
+						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
+					</ul>
+					<ul>
+						<li class="title"><a href="links.html">外部リンク</a></li>
+						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
+						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
+						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
+						<li><a href="links.html#thprac">thprac</a></li>
 					</ul>
 				</div>
 
@@ -136,16 +191,27 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">ホーム</a></li>
-				<li><a href="">ドロップダウン</a>
+				<li><a href="about.html">自己紹介</a></li>
+				<li><a href="services.html">活動一覧</a>
 					<ul>
-						<li><a href="#">メニューメニューメニュー</a></li>
-						<li><a href="#">メニュー</a></li>
-						<li><a href="#">メニュー</a></li>
-						<li><a href="#">メニュー</a></li>
+						<li><a href="services.html#replay-party-stream">東方原作みんなのリプレイ鑑賞会 配信</a></li>
+						<li><a href="services.html#hatenablog">東方原作みんなのリプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#reservation-form">東方原作みんなのリプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#k-uploader">けーろだ</a></li>
+						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
+						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
 					</ul>
 				</li>
-				<li><a href="#">メニュー</a></li>
-				<li><a href="#">メニュー</a></li>
+				<li><a href="links.html">外部リンク</a>
+					<ul>
+						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
+						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
+						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
+						<li><a href="links.html#thprac">thprac</a></li>
+					</ul>
+				</li>
+
 			</ul>
 		</nav>
 
