サービス説明の文にリンクを付けるのを忘れていた

--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
 				<div class="list" id="replay-party-stream">
 					<figure><a href="https://www.twitch.tv/karouchangamer"><img src="images/replay-party.png"
 								alt=""></a></figure>
-					<h4>配信</h4>
+					<h4><a href="https://www.twitch.tv/karouchangamer">配信</a></h4>
 					<p class="text">
 
 						2013年9月8日から<a href="https://www.nicovideo.jp/user/33950117">niconico</a>で始まって以来長く続いている鑑賞会です。<br>
@@ -58,7 +58,7 @@
 				<div class="list" id="hatenablog">
 					<figure><a href="https://yumiyareplayparty.hatenablog.com/"><img src="images/hatenablog.png"
 								alt=""></a></figure>
-					<h4>ルールや順番など</h4>
+					<h4><a href="https://yumiyareplayparty.hatenablog.com/">ルールや順番など</a></h4>
 					<p class="text">
 						<a href="https://yumiyareplayparty.hatenablog.com/">こちら</a>からルールや順番などを読むことができます。<br>
 					</p>
@@ -88,7 +88,7 @@
 
 				<div class="list" id="k-uploader">
 					<figure><a href="https://www.puresign.tokyo"><img src="images/k-uploader.png" alt=""></a></figure>
-					<h4>けーろだ</h4>
+					<h4><a href="https://www.puresign.tokyo">けーろだ</a></h4>
 					<p class="text">
 						東方のリプレイをアップロードするための場所です<br>
 						リプレイ鑑賞会の為だけでなく多様な用途でお使いください
@@ -98,7 +98,7 @@
 				<div class="list" id="k-uploader-th09">
 					<figure><a href="https://www.puresign.tokyo/pofv/index.html"><img src="images/k-uploader-th09.png"
 								alt=""></a></figure>
-					<h4>けーろだ花映塚</h4>
+					<h4><a href="https://www.puresign.tokyo/pofv/index.html">けーろだ花映塚</a></h4>
 					<p class="text">
 						けーろだは花映塚が上げられません。こちらに上げてください。
 					</p>
@@ -107,7 +107,7 @@
 				<div class="list" id="getuploader-toho_yumiya">
 					<figure><a href="https://ux.getuploader.com/toho_yumiya/"><img src="images/uploader.png" alt=""></a>
 					</figure>
-					<h4>thprac用uploader</h4>
+					<h4><a href="https://ux.getuploader.com/toho_yumiya/">thprac用uploader</a></h4>
 					<p class="text">
 						有志の作成した練習用ツール、thpracを使用したリプレイはこちらにアップロードしてください
 					</p>
