--- a/links.html
+++ b/links.html
@@ -148,6 +148,7 @@
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
 						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
+						<li><a href="services.html#pixiv-fanbox">pixiv FANBOX</a></li>
 					</ul>
 					<ul>
 						<li class="title"><a href="links.html">外部リンク</a></li>
@@ -200,6 +201,7 @@
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
 						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
+						<li><a href="services.html#pixiv-fanbox">pixiv FANBOX</a></li>
 					</ul>
 				</li>
 				<li><a href="links.html">外部リンク</a>
