リプレイ鑑賞会ログの項目を追加

--- a/services.html
+++ b/services.html
@@ -41,8 +41,6 @@
 
 						2013年9月8日から<a href="https://www.nicovideo.jp/user/33950117">niconico</a>で始まって以来長く続いている鑑賞会です。<br>
 						毎週日曜14時から行っています。<br>
-						過去のログは<a
-							href="https://docs.google.com/spreadsheets/d/1lcrbGnX5VC_ENwgctma-8SS8Tz3_QYcgftANHOpwdGs">こちら</a>から見ることができます。<br>
 						以下の3サイトで同時放送しています
 					<ul class="sns1">
 						<li><a href="https://www.youtube.com/@%E9%81%8E%E5%8A%B4%E3%81%A1%E3%82%83%E3%82%93-m1v"><i
@@ -61,6 +59,19 @@
 					<h4><a href="https://yumiyareplayparty.hatenablog.com/">ルールや順番など</a></h4>
 					<p class="text">
 						<a href="https://yumiyareplayparty.hatenablog.com/">こちら</a>からルールや順番などを読むことができます。<br>
+					</p>
+				</div>
+
+				<div class="list" id="stream-log">
+					<figure><a
+							href="https://docs.google.com/spreadsheets/d/1lcrbGnX5VC_ENwgctma-8SS8Tz3_QYcgftANHOpwdGs"><img
+								src="images/google-sheets.png" alt=""></a></figure>
+					<h4><a
+							href="https://docs.google.com/spreadsheets/d/1lcrbGnX5VC_ENwgctma-8SS8Tz3_QYcgftANHOpwdGs">リプレイ鑑賞会ログ</a>
+					</h4>
+					<p class="text">
+						<a
+							href="https://docs.google.com/spreadsheets/d/1lcrbGnX5VC_ENwgctma-8SS8Tz3_QYcgftANHOpwdGs">こちら</a>から過去のログを見ることができます<br>
 					</p>
 				</div>
 
@@ -173,6 +184,7 @@
 						<li class="title"><a href="services.html">活動一覧</a></li>
 						<li><a href="services.html#replay-party-stream">東方リプレイ鑑賞会 配信</a></li>
 						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#stream-log">東方リプレイ鑑賞会 ログ</a></li>
 						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
@@ -226,6 +238,7 @@
 					<ul>
 						<li><a href="services.html#replay-party-stream">東方原作みんなのリプレイ鑑賞会 配信</a></li>
 						<li><a href="services.html#hatenablog">東方原作みんなのリプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#stream-log">東方原作みんなのリプレイ鑑賞会 ログ</a></li>
 						<li><a href="services.html#reservation-form">東方原作みんなのリプレイ鑑賞会 応募フォーム</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
