--- a/about.html
+++ b/about.html
@@ -113,6 +113,7 @@
 						<li class="title"><a href="services.html">活動一覧</a></li>
 						<li><a href="services.html#replay-party-stream">東方リプレイ鑑賞会 配信</a></li>
 						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
+						<li><a href="services.html#stream-log">東方リプレイ鑑賞会 ログ</a></li>
 						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
