サミー大会を外部リンクに追記

--- a/links.html
+++ b/links.html
@@ -103,6 +103,27 @@
 					</p>
 				</div>
 
+				<div class="list" id="kogasana-tournament">
+					<figure><a href="https://wikiwiki.jp/ufo-taikai/"><img src="images/kogasana-tournament.png"
+								alt=""></a>
+					</figure>
+					<h4><a href="https://wikiwiki.jp/ufo-taikai/">東方スターロータスシップ大会</a></h4>
+					<p class="text">
+
+						サミーさんが主催する、東方原作STGの個人大会の名称です。<br>
+						通称：サミー大会とも呼んでいます。<br>
+						皆のリプレイ(努力、成果、ネタ)を見せ合って楽しむ星蓮船オンリーの星蓮船大会、<br>
+						一週間毎にお題が変わる東方原作STGスコア会の定期稼符大会を開催しています。<br>
+						大会とは書いていますが、競い合い無しで緩く遊ぶ事が目的の大会です。<br>
+						提出するリプレイはクリアしていなくても問題ありません。<br>
+						目標までの途中経過や練習風景のリプレイでも何でもOKです！<br>
+						複数ある部門の中から好きな部門に参加し、腕試しにやってみるもよし、<br>
+						ガチでやってもよし、その部門のルールに合わせて好きなように遊んでもよし、<br>
+						思い思いの遊び方で大会に参加してください！<br>
+
+					</p>
+				</div>
+
 			</div>
 			<!--/.list-yoko-scroll-->
 
@@ -158,6 +179,7 @@
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
+						<li><a href="links.html#kogasana-tournament">東方スターロータスシップ大会</a></li>
 					</ul>
 				</div>
 
@@ -213,6 +235,7 @@
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
+						<li><a href="links.html#kogasana-tournament">東方スターロータスシップ大会</a></li>
 					</ul>
 				</li>
 
