--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
+						<li><a href="links.html#kogasana-tournament">東方スターロータスシップ大会</a></li>
 					</ul>
 				</div>
 
@@ -258,6 +259,7 @@
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
+						<li><a href="links.html#kogasana-tournament">東方スターロータスシップ大会</a></li>
 					</ul>
 				</li>
 
