thpracの取説が画像丸ごと日本語になっていたのでリンクを向けかえた

--- a/links.html
+++ b/links.html
@@ -89,9 +89,12 @@
 				</div>
 
 				<div class="list" id="thprac">
-					<figure><a href="https://github.com/touhouworldcup/thprac"><img src="images/thprac.png" alt=""></a>
+					<figure>
+						<a href="https://github.com/touhouworldcup/thprac/blob/master/README_JP.md">
+							<img src="images/thprac.png" alt="">
+						</a>
 					</figure>
-					<h4><a href="https://github.com/touhouworldcup/thprac">thprac</a></h4>
+					<h4><a href="https://github.com/touhouworldcup/thprac/blob/master/README_JP.md">thprac</a></h4>
 					<p class="text">
 
 						黄昏酒場を含むほぼ全ての東方作品に対応している練習ツールです<br>
