KGスコボを登録、サミー大会の更新し忘れを修正

--- a/links.html
+++ b/links.html
@@ -59,6 +59,19 @@
 					</p>
 				</div>
 
+				<div class="list" id="thscorekg">
+					<figure><a href="https://wikiwiki.jp/thscorekg/"><img src="images/thscorekg.png" alt=""></a>
+					</figure>
+					<h4><a href="https://wikiwiki.jp/thscorekg/">東方スコア記録wiki</a></h4>
+					<p class="text">
+
+						各種東方作品において<br>
+						全国5位までの記録をまとめているサイトです。<br>
+						管理人はK・Gさんです。<br>
+
+					</p>
+				</div>
+
 				<div class="list" id="maribelhearn">
 					<figure><a href="https://maribelhearn.com"><img src="images/maribelhearn.png" alt=""></a></figure>
 					<h4><a href="https://maribelhearn.com">maribelhearn.com</a></h4>
@@ -179,6 +192,7 @@
 						<li class="title"><a href="links.html">外部リンク</a></li>
 						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
 						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#thscorekg">東方スコア記録wiki</a></li>
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
@@ -235,6 +249,7 @@
 					<ul>
 						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
 						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#thscorekg">東方スコア記録wiki</a></li>
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
