--- a/about.html
+++ b/about.html
@@ -124,6 +124,7 @@
 						<li class="title"><a href="links.html">外部リンク</a></li>
 						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
 						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#thscorekg">東方スコア記録wiki</a></li>
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
@@ -183,9 +184,11 @@
 					<ul>
 						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
 						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#thscorekg">東方スコア記録wiki</a></li>
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
+						<li><a href="links.html#kogasana-tournament">東方スターロータスシップ大会</a></li>
 					</ul>
 				</li>
 
