--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 						<li class="title"><a href="links.html">外部リンク</a></li>
 						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
 						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#thscorekg">東方スコア記録wiki</a></li>
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
@@ -256,6 +257,7 @@
 					<ul>
 						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
 						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#thscorekg">東方スコア記録wiki</a></li>
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
 						<li><a href="links.html#thprac">thprac</a></li>
