--- a/links.html
+++ b/links.html
@@ -59,6 +59,18 @@
 					</p>
 				</div>
 
+				<div class="list" id="thex-score">
+					<figure><a href="https://thex-score.net"><img src="images/thex-score.png" alt=""></a></figure>
+					<h4><a href="https://thex-score.net">東方EXTRAスコアボード</a></h4>
+					<p class="text">
+
+						上記<a href="links.html#urayou">裏スコアボード</a>に倣ってEX版として作成されたものです。<br>
+						これも一定スコアに達した人のみが登録できるスコアボードです。<br>
+						この基準を達成することを目標にスコアを稼いでほしいとして作成されたページです。<br>
+
+					</p>
+				</div>
+
 				<div class="list" id="thscorekg">
 					<figure><a href="https://wikiwiki.jp/thscorekg/"><img src="images/thscorekg.png" alt=""></a>
 					</figure>
@@ -192,6 +204,7 @@
 						<li class="title"><a href="links.html">外部リンク</a></li>
 						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
 						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#thex-score">東方EXTRAスコアボード</a></li>
 						<li><a href="links.html#thscorekg">東方スコア記録wiki</a></li>
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
@@ -249,6 +262,7 @@
 					<ul>
 						<li><a href="links.html#silentselene">サイレントセレナ</a></li>
 						<li><a href="links.html#urayou">裏スコアボード</a></li>
+						<li><a href="links.html#thex-score">東方EXTRAスコアボード</a></li>
 						<li><a href="links.html#thscorekg">東方スコア記録wiki</a></li>
 						<li><a href="links.html#maribelhearn">maribelhearn.com</a></li>
 						<li><a href="links.html#alcostg-score">黄昏酒場スコアボード</a></li>
