puresign-tokyo projectからpuresign projectへ変更

--- a/links.html
+++ b/links.html
@@ -177,7 +177,7 @@
 					<li><a href="https://www.twitch.tv/karouchangamer"><i class="fab fa-twitch"></i></a></li>
 				</ul>
 
-				<small>Copyright© puresign-tokyo project All Rights Reserved.</small>
+				<small>Copyright© puresign project All Rights Reserved.</small>
 
 			</div>
 			<!--/.footer1-->
