えるろだの追加

--- a/links.html
+++ b/links.html
@@ -195,6 +195,7 @@
 						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
 						<li><a href="services.html#stream-log">東方リプレイ鑑賞会 ログ</a></li>
 						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#l-uploader">えるろだ</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
 						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
@@ -252,6 +253,7 @@
 						<li><a href="services.html#hatenablog">東方原作みんなのリプレイ鑑賞会 ルール</a></li>
 						<li><a href="services.html#reservation-form">東方原作みんなのリプレイ鑑賞会 応募フォーム</a></li>
 						<li><a href="services.html#stream-log">東方原作みんなのリプレイ鑑賞会 ログ</a></li>
+						<li><a href="services.html#l-uploader">えるろだ</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
 						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
