--- a/services.html
+++ b/services.html
@@ -97,6 +97,15 @@
 
 			<div class="list-tate-scroll">
 
+				<div class="list" id="l-uploader">
+					<figure><a href="https://l-uploader.puresign.tokyo"><img src="images/l-uploader.png" alt=""></a></figure>
+					<h4><a href="https://l-uploader.puresign.tokyo">えるろだ</a></h4>
+					<p class="text">
+						東方のリプレイをアップロードするための場所です<br>
+						リプレイ鑑賞会の為だけでなく多様な用途でお使いください
+					</p>
+				</div>
+
 				<div class="list" id="k-uploader">
 					<figure><a href="https://www.puresign.tokyo"><img src="images/k-uploader.png" alt=""></a></figure>
 					<h4><a href="https://www.puresign.tokyo">けーろだ</a></h4>
@@ -186,6 +195,7 @@
 						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
 						<li><a href="services.html#stream-log">東方リプレイ鑑賞会 ログ</a></li>
 						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#l-uploader">えるろだ</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
 						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
@@ -243,6 +253,7 @@
 						<li><a href="services.html#hatenablog">東方原作みんなのリプレイ鑑賞会 ルール</a></li>
 						<li><a href="services.html#stream-log">東方原作みんなのリプレイ鑑賞会 ログ</a></li>
 						<li><a href="services.html#reservation-form">東方原作みんなのリプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#l-uploader">えるろだ</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
 						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
