--- a/about.html
+++ b/about.html
@@ -115,6 +115,7 @@
 						<li><a href="services.html#hatenablog">東方リプレイ鑑賞会 ルール</a></li>
 						<li><a href="services.html#stream-log">東方リプレイ鑑賞会 ログ</a></li>
 						<li><a href="services.html#reservation-form">東方リプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#l-uploader">えるろだ</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
 						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
@@ -175,6 +176,7 @@
 						<li><a href="services.html#replay-party-stream">東方原作みんなのリプレイ鑑賞会 配信</a></li>
 						<li><a href="services.html#hatenablog">東方原作みんなのリプレイ鑑賞会 ルール</a></li>
 						<li><a href="services.html#reservation-form">東方原作みんなのリプレイ鑑賞会 応募フォーム</a></li>
+						<li><a href="services.html#l-uploader">えるろだ</a></li>
 						<li><a href="services.html#k-uploader">けーろだ</a></li>
 						<li><a href="services.html#k-uploader-th09">けーろだ花映塚</a></li>
 						<li><a href="services.html#getuploader-toho_yumiya">thprac用uploader</a></li>
